--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <service android:name=".MyFirebaseMessagingService">
-        <intent-filter>
-            <action android:name="com.google.firebase.MESSAGING_EVENT" />
-        </intent-filter>
-    </service>
 
-    <service
-        android:name=".Class.NotificationService"
-        android:enabled="true"
-        android:exported="true" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/hansungclass"
@@ -45,6 +36,21 @@
         <activity android:name=".Dialog.TableAlertDialog"
             android:theme="@style/Theme.AppCompat.Dialog"
             ></activity>
+
+
+        <!--<service android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>-->
+
+        <service
+            android:name=".Class.NotificationService"
+            android:enabled="true"
+            android:exported="true" />
+
     </application>
+
+
 
 </manifest>
